--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,8 @@
 
     <footer class="footer">
       <div class="container">
-            <p><a href="/api/friends">Friends List</a> | <a href="https://github.com/alexjivov/node-express-friend-finder">My GitHub Repo</a></p>
+            <p><a href="/api/friends">Friends List</a>
+            <a href="https://github.com/alexjivov/node-express-friend-finder">My GitHub Repo</a></p>
       </div>
     </footer>
 
